--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Problem Practise In C++/problem2.exe
 Problem Practise In C++/problem2.cpp
 Problem Practise In C++/Test2Q1.cpp
 Problem Practise In C++/C++ Language.code-workspace
+*.exe
